Fixed some layout issues

--- a/src/pages/SingleProductDesktop/style.scss
+++ b/src/pages/SingleProductDesktop/style.scss
@@ -13,3 +13,13 @@
     cursor: zoom-in;
   }
 }
+
+.button-back {
+  border: none;
+  width: 10vw;
+  text-align: start;
+  &:hover {
+    background-color: transparent;
+    color: #0acf83;
+  }
+}
